# ece-scm-coupling

./: .gitignore  CHANGES.txt  LICENSE  README.md  compare_convergence_criteria.ipynb  compare_ensemble.ipynb  config-run.xml.j2  context.py  control_experiment.ipynb  control_experiment.py  control_experiment_1.ipynb  control_experiment_1.py  control_experiment_2_marti.ipynb  control_experiment_2_marti.py  control_experiment_3_marti.ipynb  control_experiment_3_marti.py  convergence_checker.py  coupling_scheme_control.py  coupling_scheme_convergence.ipynb  coupling_scheme_convergence.py  coupling_scheme_times.py  create_perturbed_input_files.py  create_perturbed_rstas_files.py  create_rstos_from_cmems.py  dummy_rstas.nc  ece4_example.py  ece4_test.slurm  file_handling.py  forecast_winners.ipynb  format_code.sh  helpers.py  helpers_nemo.ipynb  helpers_oifs.ipynb  helpers_scm.ipynb  legwwms_impact.py  mass_flux_off.ipynb  mass_flux_off.py  nwp_ensemble.py  nwp_schwarz_iters.ipynb  plotting.py  (+19 more)
AOSCMcoupling/: __init__.py  context.py  convergence_checker.py  experiment.py  files.py  helpers.py  remapping.py  schwarz_coupling.py  templates.py
templates/: config-run.xml.j2  config-run_ece4.xml.j2  rstos_template.nc
tests/: test_convergence.py  test_create_perturbed_rstas_files.py  test_files.py  test_helpers.py  test_update_oifs_input_file.py
tutorials/: 01_basic_aoscm_experiment.md  02_input_files.md  02_schwarz_coupling.md  03_schwarz_coupling.md
utils/: compute_rstas.py  create_nemo_init_file.py  create_rstos_from_cmems.py  create_si3_init_file.py  files.py  helpers.py  (+4 more)
(+4 files in other folders)
